# jhpc

./: .clang-format  CMakeLists.txt  README.md  format.sh  main.cpp  resultbops_collins.txt  resultbops_gavin.txt  resultbops_krogan_core.txt  resultbops_krogan_extended.txt
evaluation/: collins.py  collins.sh  match.py  readme.md
include/: Gavin.txt  KPIN.txt  a.out  bops.h  collins.txt  config.h  dag.h  gene_express.h  graph.h  krogan_core.txt  krogan_extended.txt  subcelluar.h  ungraph.h
include/bak/: bio_information.h  cns_bak.cpp  graph.h  subcelluar.h  ungraph.cpp  ungraph.h
python/: graph.ipynb  graph.py
result/: Collins1.txt  Collins2.txt  Gavin_0.1_0.1_1.0.txt  Gavin_0.1_0.2_1.0.txt  Gavin_0.1_0.3_0.6.txt  Gavin_0.1_0.4_0.9.txt  Gavin_0.1_0.5_1.0.txt  Gavin_0.1_0.6_0.3.txt  Gavin_0.1_0.7_0.9.txt  Gavin_0.1_0.8_0.5.txt  Gavin_0.1_0.9_0.1.txt  Gavin_0.1_1.0_1.0.txt  Gavin_0.2_0.1_0.7.txt  Gavin_0.2_0.2_0.6.txt  Gavin_0.2_0.3_0.3.txt  Gavin_0.2_0.4_0.5.txt  Gavin_0.2_0.5_0.1.txt  Gavin_0.2_0.6_0.6.txt  Gavin_0.2_0.7_0.6.txt  Gavin_0.2_0.8_0.3.txt  Gavin_0.2_0.9_0.8.txt  Gavin_0.2_1.0_0.3.txt  Gavin_0.3_0.1_0.2.txt  Gavin_0.3_0.2_0.1.txt  Gavin_0.3_0.3_0.4.txt  Gavin_0.3_0.4_1.0.txt  Gavin_0.3_0.5_0.7.txt  Gavin_0.3_0.6_0.3.txt  Gavin_0.3_0.7_0.7.txt  Gavin_0.3_0.8_0.4.txt  Gavin_0.3_0.9_0.4.txt  Gavin_0.3_1.0_0.8.txt  Gavin_0.4_0.1_0.9.txt  Gavin_0.4_0.2_0.3.txt  Gavin_0.4_0.3_0.8.txt  Gavin_0.4_0.4_1.0.txt  Gavin_0.4_0.5_0.3.txt  Gavin_0.4_0.6_0.4.txt  Gavin_0.4_0.7_0.6.txt  Gavin_0.4_0.8_1.0.txt  (+275 more)
result/CFinder/: a.out  cfinder_collins.txt  cfinder_gavin.txt  cfinder_krogan_core.txt  cfinder_krogan_extended.txt  main.cpp
result/SPICi/: krogan_core.txt  spici_collins.txt  spici_gavin.txt  (+1 more)
src/: .clang-format  bops.cpp  cns.cpp  dpin.cpp  kpin.cpp  new.cpp  spin.cpp  test.cpp  two_cns.cpp
(+1615 files in other folders)
